# World-R1

./: .gitignore  README.md  SUPPORT.md  pyproject.toml
config/: base.py  world_r1.py
dataset/enhanced/: dynamic.txt  test.txt  train.txt
dataset/enhanced/.append_ratio_state/: batch_0000.json  batch_0004.json  batch_0008.json  batch_0012.json  batch_0016.json  batch_0020.json  batch_0024.json  batch_0028.json  batch_0032.json  batch_0036.json  batch_0040.json  batch_0044.json  batch_0048.json  batch_0052.json  batch_0056.json  batch_0060.json  batch_0064.json  batch_0068.json  batch_0072.json  batch_0076.json  batch_0080.json  batch_0084.json  batch_0088.json  batch_0092.json  (+33 more)
dataset/final/: dynamic.txt  test.txt  train.txt
flow_grpo/: rewards.py
flow_grpo/diffusers_patch/: camera_trajectory_utils.py  cogvideox_pipeline_with_logprob.py  noise_visualizer.py  wan_pipeline_with_logprob.py  wan_prompt_embedding.py
reward_server/: __init__.py  general_reward.py  reward_3d.py  reward_3d_backend.py
reward_server/depth_anything_3/: api.py  cfg.py  registry.py
scripts/: append_category_ratio_prompts.py  compare_train_infer_wrap.py  enhance_dataset_prompts.py  infer_cogvideox_lora.py  infer_wan_lora.py  noise_wrap_ablation.py  noise_wrap_multi_prompt_suite.py  noise_wrap_strength_sweep.py  noise_wrap_sweep.py  rebalance_added_camera_prefixes.py  rollout_only_verify.py  run_general_reward_server.sh  run_multi_node.sh  run_name_utils.sh  run_reward_3d_server.sh  run_single_node.sh  run_training.sh  serve_general_reward.py  serve_reward_3d.py  train_world_r1.py
(+91 files in other folders)
