[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-r1"
version = "0.1.0"
description = "Paper-related release of World-R1"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["flow_grpo*", "reward_server*"]
